{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 151,
  "lineage": "b71731c9-af5b-0b24-fb66-3d67c29c9f53",
  "resources": [
    {
      "module": "module.sap_deployer",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.sap_deployer",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "firewall-azure",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "deployer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkInterfaces/MGMT-NOEU-DEP02_mgmtnoeudep02deploy00-nic",
            "internal_domain_name_suffix": "vrt3bpmomswunpvvhou5b05a2c.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.170.20.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/publicIPAddresses/MGMT-NOEU-DEP02_mgmtnoeudep02deploy00-pip",
                "subnet_id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/MGMT-NOEU-DEP02_deployment-subnet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B0-A3-F0",
            "name": "MGMT-NOEU-DEP02_mgmtnoeudep02deploy00-nic",
            "private_ip_address": "10.170.20.68",
            "private_ip_addresses": [
              "10.170.20.68"
            ],
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "virtual_machine_id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Compute/virtualMachines/MGMT-NOEU-DEP02_mgmtnoeudep02deploy00"
          },
          "dependencies": [
            "module.sap_deployer.azurerm_public_ip.deployer",
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkSecurityGroups/MGMT-NOEU-DEP02_deployment-nsg",
            "location": "northeurope",
            "name": "MGMT-NOEU-DEP02_deployment-nsg",
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.170.20.64/28"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5985",
                  "5986"
                ],
                "direction": "Inbound",
                "name": "winrm",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.170.20.64/28"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.170.20.64/28"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.170.20.64/28"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkSecurityGroups/MGMT-NOEU-DEP02_deployment-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "MGMT-NOEU-DEP02_deployment-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sap_deployer.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.170.20.64/28"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkSecurityGroups/MGMT-NOEU-DEP02_deployment-nsg/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "MGMT-NOEU-DEP02_deployment-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sap_deployer.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr_winrm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.170.20.64/28"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "5985",
              "5986"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkSecurityGroups/MGMT-NOEU-DEP02_deployment-nsg/securityRules/winrm",
            "name": "winrm",
            "network_security_group_name": "MGMT-NOEU-DEP02_deployment-nsg",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sap_deployer.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "deployer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/publicIPAddresses/MGMT-NOEU-DEP02_mgmtnoeudep02deploy00-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.169.139.214",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "MGMT-NOEU-DEP02_mgmtnoeudep02deploy00-pip",
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.170.20.64/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/MGMT-NOEU-DEP02_deployment-subnet",
            "name": "MGMT-NOEU-DEP02_deployment-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage",
              "Microsoft.Web"
            ],
            "virtual_network_name": "MGMT-NOEU-DEP02-vnet"
          },
          "dependencies": [
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.170.20.80/28"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/AzureWebappSubnet",
            "name": "AzureWebappSubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage",
              "Microsoft.Web"
            ],
            "virtual_network_name": "MGMT-NOEU-DEP02-vnet"
          },
          "dependencies": [
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate_nsg_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/MGMT-NOEU-DEP02_deployment-subnet",
            "network_security_group_id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkSecurityGroups/MGMT-NOEU-DEP02_deployment-nsg",
            "subnet_id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/MGMT-NOEU-DEP02_deployment-subnet"
          },
          "dependencies": [
            "module.sap_deployer.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.azurerm_network_security_rule.nsr_rdp",
            "module.sap_deployer.azurerm_network_security_rule.nsr_ssh",
            "module.sap_deployer.azurerm_network_security_rule.nsr_winrm",
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.data.azurerm_network_security_group.nsg_mgmt",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_subnet.subnet_mgmt",
            "module.sap_deployer.data.azurerm_virtual_network.vnet_mgmt",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.sap_deployer",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.170.20.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bdd067ac-648e-46ad-beb5-3ba9f0ebe0e2",
            "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet",
            "location": "northeurope",
            "name": "MGMT-NOEU-DEP02-vnet",
            "resource_group_name": "MGMT-NOEU-DEP02-INFRASTRUCTURE",
            "subnet": [
              {
                "address_prefix": "10.170.20.64/28",
                "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/MGMT-NOEU-DEP02_deployment-subnet",
                "name": "MGMT-NOEU-DEP02_deployment-subnet",
                "security_group": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/networkSecurityGroups/MGMT-NOEU-DEP02_deployment-nsg"
              },
              {
                "address_prefix": "10.170.20.80/28",
                "id": "/subscriptions/d6c8e3b6-467e-452e-97c9-49d9de9e37da/resourceGroups/MGMT-NOEU-DEP02-INFRASTRUCTURE/providers/Microsoft.Network/virtualNetworks/MGMT-NOEU-DEP02-vnet/subnets/AzureWebappSubnet",
                "name": "AzureWebappSubnet"
              }
            ]
          },
          "dependencies": [
            "module.sap_deployer.azurerm_resource_group.deployer",
            "module.sap_deployer.data.azurerm_resource_group.deployer",
            "module.sap_deployer.random_id.deployer"
          ]
        }
      ]
    }
  ]
}